@@ -35,6 +35,19 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|common
+operator|.
+name|SolrException
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|spelling
 operator|.
 name|suggest
@@ -791,6 +804,98 @@ literal|"true"
 argument_list|)
 argument_list|,
 literal|"//str[@name='command'][.='reloadAll']"
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testBadSuggesterName
+specifier|public
+name|void
+name|testBadSuggesterName
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|String
+name|fakeSuggesterName
+init|=
+literal|"does-not-exist"
+decl_stmt|;
+name|assertQEx
+argument_list|(
+literal|"No suggester named "
+operator|+
+name|fakeSuggesterName
+operator|+
+literal|" was configured"
+argument_list|,
+name|req
+argument_list|(
+literal|"qt"
+argument_list|,
+name|rh
+argument_list|,
+name|SuggesterParams
+operator|.
+name|SUGGEST_DICT
+argument_list|,
+name|fakeSuggesterName
+argument_list|,
+name|SuggesterParams
+operator|.
+name|SUGGEST_Q
+argument_list|,
+literal|"exampel"
+argument_list|,
+name|SuggesterParams
+operator|.
+name|SUGGEST_COUNT
+argument_list|,
+literal|"2"
+argument_list|)
+argument_list|,
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|BAD_REQUEST
+argument_list|)
+expr_stmt|;
+name|assertQEx
+argument_list|(
+literal|"'"
+operator|+
+name|SuggesterParams
+operator|.
+name|SUGGEST_DICT
+operator|+
+literal|"' parameter not specified and no default suggester configured"
+argument_list|,
+name|req
+argument_list|(
+literal|"qt"
+argument_list|,
+name|rh
+argument_list|,
+name|SuggesterParams
+operator|.
+name|SUGGEST_Q
+argument_list|,
+literal|"exampel"
+argument_list|,
+name|SuggesterParams
+operator|.
+name|SUGGEST_COUNT
+argument_list|,
+literal|"2"
+argument_list|)
+argument_list|,
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|BAD_REQUEST
 argument_list|)
 expr_stmt|;
 block|}
